# adapto-vscode

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
crates/adapto-lsp/: Cargo.toml
crates/adapto-lsp/src/: completion.rs  definition.rs  document.rs  formatter.rs  hover.rs  main.rs  semantic_tokens.rs  symbols.rs
extension/: .vscodeignore  CHANGELOG.md  LICENSE  README.md  esbuild.mjs  language-configuration.json  package-lock.json  package.json
extension/media/: preview.css
extension/snippets/: adapto.json
extension/src/: block-indicators.ts  block-separators.ts  commands.ts  control-flow-decorations.ts  extension.ts  preview.ts  security-lens.ts  sidebar.ts
extension/syntaxes/: adapto.tmLanguage.json
extension/themes/: adapto-dark.json  adapto-light.json
