[package]
name = "adapto-lsp"
version = "0.1.0"
edition = "2021"

[dependencies]
adapto_parser = { git = "https://github.com/stukenov/adapto-core.git", branch = "master" }
adapto_compiler = { git = "https://github.com/stukenov/adapto-core.git", branch = "master" }
tower-lsp = "0.20"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dashmap = "6"
ropey = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
